--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /test/dummy/.sass-cache
 /test/dummy/db/*.sqlite3
 /test/dummy/db/*.sqlite3-journal
+/test/dummy/db/*.sqlite3-shm
+/test/dummy/db/*.sqlite3-wal
 /test/dummy/log/*.log
 /test/dummy/tmp/
 /vendor/
